...
        .padding(.vertical, 8)
    }
}

struct CategoryItemsListView: View {
    private struct Constant {
        static let searchBarPrompt = "Search..."
    }
    
    let category: Category
    @ObservedObject var viewModel: CategoryItemsListViewModel
    init(category: Category, viewModel: CategoryItemsListViewModel) {
        self.category = category
...
