...
//  Created by Luis David Goyes on 15/09/22.
//

import SwiftUI

fileprivate struct ItemDetailsViewConstant {
    static let commonLocationsTitle = "Common Locations"
    static let locationsImageName = "map"
}

fileprivate struct ItemDetailsViewStyle {
    struct Category {
        static let font = Font.title3
...
